Manejo de obtencion de varias tarjetas
